[gd_scene load_steps=2 format=3 uid="uid://bgu7t40v4mtmh"]

[ext_resource type="Script" uid="uid://cki6pwfuevhjd" path="res://Utilities/Autoloads/MessageManager/MessageManager.gd" id="1_2cma4"]

[node name="MessageManager" type="CanvasLayer" unique_id=1402460025]
process_mode = 3
layer = 3
script = ExtResource("1_2cma4")

[node name="MessageManager" type="MarginContainer" parent="." unique_id=1637142411]
unique_name_in_owner = true
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -4.0
grow_horizontal = 0
grow_vertical = 0
theme_override_constants/margin_right = 4

[node name="MessageStack" type="VBoxContainer" parent="MessageManager" unique_id=438795128]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/separation = 2
alignment = 2

[connection signal="child_exiting_tree" from="MessageManager/MessageStack" to="." method="_on_message_stack_child_exiting_tree"]
